--- a/index.html
+++ b/index.html
@@ -310,9 +310,10 @@
 						<div class="portf-filter text-center">
                             <ul class="list-unstyled ul-filter">
                                 <li data-filter="*" class="active_filter">all</li>
-                                <li data-filter=".project">projects</li>
-                                <li data-filter=".media">media</li>
-                                <li data-filter=".award">awards</li>
+                                <li data-filter=".rolls">rolls</li>
+                                <li data-filter=".tea">tea</li>
+								<li data-filter=".meals">meals</li>
+								<li data-filter=".desserts">desserts</li>
                             </ul>
                         </div>
 						<div class="row pb-4 mb-5 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">
