--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 		<!-- Web Fonts  -->
 		<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,700,800%7COswald:400,500,600,700%7CPlayfair+Display" rel="stylesheet" type="text/css">
-
+		
 		<!-- Vendor CSS -->
 		<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">		<link rel="stylesheet" href="vendor/fontawesome-free/css/all.min.css">		<link rel="stylesheet" href="vendor/animate/animate.min.css">		<link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.min.css">		<link rel="stylesheet" href="vendor/owl.carousel/assets/owl.carousel.min.css">		<link rel="stylesheet" href="vendor/owl.carousel/assets/owl.theme.default.min.css">		<link rel="stylesheet" href="vendor/magnific-popup/magnific-popup.min.css">
 
@@ -189,8 +189,8 @@
 										</li>
 										<li class="align-items-center d-none d-lg-flex order-4 px-5 mx-2 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="250">
 											<span class="header-logo">
-												<a href="demo-coffee.html" class="w-100 text-center">
-													<img class="scale-4" alt="Porto - Demo Coffee" width="180" height="122" data-sticky-width="82" data-sticky-height="40" data-sticky-top="72" src="img/logo.png">
+												<a href="index.html" class="w-100 text-center">
+													<img class="scale-4" alt="Roll N Tea" width="180" height="122" data-sticky-width="82" data-sticky-height="40" data-sticky-top="72" src="img/logo.png">
 												</a>
 											</span>
 										</li>
@@ -305,17 +305,17 @@
 									<hr class="mx-auto w-25 custom-h-1 appear-animation" data-appear-animation="dividerProgress25" data-appear-animation-delay="200">
 								</div>
 								<p class="text-4 line-height-9 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit massa enim.</p>
+								<div class="portf-filter text-center">
+									<ul class="list-unstyled ul-filter">
+										<li data-filter="*" class="active_filter">all</li>
+										<li data-filter=".rolls">rolls</li>
+										<li data-filter=".tea">tea</li>
+										<li data-filter=".meals">meals</li>
+										<li data-filter=".desserts">desserts</li>
+									</ul>
+								</div>
 							</div>
 						</div>
-						<div class="portf-filter text-center">
-                            <ul class="list-unstyled ul-filter">
-                                <li data-filter="*" class="active_filter">all</li>
-                                <li data-filter=".rolls">rolls</li>
-                                <li data-filter=".tea">tea</li>
-								<li data-filter=".meals">meals</li>
-								<li data-filter=".desserts">desserts</li>
-                            </ul>
-                        </div>
 						<div class="row pb-4 mb-5 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">
 							<div class="col-md-6">
 								<div class="custom-menu-item">
@@ -611,7 +611,7 @@
 				<div class="container container pt-5">
 					<div class="row mb-5 pb-4">
 						<div class="col text-center">
-							<a href="demo-coffee.html" class="text-decoration-none">
+							<a href="index.html" class="text-decoration-none">
 								<img src="img/logo-full.png" class="img-fluid" width="195" height="132" alt="" />
 							</a>
 						</div>
