--- a/index.html
+++ b/index.html
@@ -311,7 +311,6 @@
 										<li data-filter=".rolls">rolls</li>
 										<li data-filter=".tea">tea</li>
 										<li data-filter=".meals">meals</li>
-										<li data-filter=".desserts">desserts</li>
 									</ul>
 								</div>
 							</div>
@@ -327,7 +326,7 @@
 										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 5</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
-										<p>Crab meat, cucumber, avocado, egg. </p>
+										<p>Crab meat, cucumber, avocado, egg.</p>
 									</div>
 								</div>
 								<div class="custom-menu-item">
@@ -386,62 +385,62 @@
 							<div class="col-md-6 tea">
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
-										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Original Milk Tea</h3></div>
+										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Milk Tea</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
 										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 3.7</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
-									<p>Available in large, hot and with toppings. </p>
+									<p>Original, Jasmine Green, Taro, Strawberry, Matcha and more.</p>
 									</div>
 								</div>
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
-										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Jasmine Green Milk Tea</h3></div>
+										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Tea</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 3.7</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 3.5</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
-										<p>Smoked salmon, crab meat, cucumber, avocado, cream cheese.</p>
+										<p>Black, Jasmine Green, Oolong, and Tea Satchet.</p>
 									</div>
 								</div>
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
-										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Mountain Roll</h3></div>
+										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Fruity Green/Black Tea</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span>9</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 4.2</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
-										<p>Spicy salmon, avocado, cucumber, topped with salmon. </p>
+										<p>Mango, Green Apple, Tropical Fruit, Litchi, Passionfruit and more.</p>
 									</div>
 								</div>
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
-										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Caterpillar Roll</h3></div>
+										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Fresh Lemon Green Tea</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 9</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 4.9</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
-										<p>Unagi, cucumber, avocado, topped with salmon.</p>
+										<p>Original, Passionfruit, Litchi, Green Apple and Grapefruit.</p>
 									</div>
 								</div>
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
-										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Bayview Roll</h3></div>
+										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Slush</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 9</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 4.4</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
-										<p>Dynamite Roll topped with torched white tuna.</p>
+										<p>Mango, Pineapple, Grape, Honeydew, Blueberry, Peach and more.</p>
 									</div>
 								</div>
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
-										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Snow Valley Roll</h3></div>
+										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Real Fruit Smoothie</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
 										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 10</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
-										<p>Unagi, avocado, tempura bits, torched white tuna, garlic mayo.</p>
+										<p>Strawberry, Mango, Strawberry Banana and Avocado.</p>
 									</div>
 								</div>
 							</div>
@@ -510,73 +509,53 @@
 								</div>
 							</div>
 							
-							<!-- TEA MENU ITEMS -->
-							<div class="col-md-6 tea">
+							<!-- MEALS MENU ITEMS -->
+							<div class="col-md-6 meals">
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
-										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">BLT Roll</h3></div>
-										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 8</strong></div>
-									</div>
-									<div class="custom-menu-item-desc">
-										<p>Bulgogi, lettuce, tomato with mayo. </p>
-									</div>
-								</div>
-								<div class="custom-menu-item">
-									<div class="custom-menu-item-details">
-										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Philadelphia Roll</h3></div>
+										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Bulgogi Bento</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
 										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 9</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
-										<p>Smoked salmon, crab meat, cucumber, avocado, cream cheese.</p>
+										<p>Bulgogi, rice, side-dishes.</p>
 									</div>
 								</div>
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
-										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Mountain Roll</h3></div>
-										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span>9</strong></div>
-									</div>
-									<div class="custom-menu-item-desc">
-										<p>Spicy salmon, avocado, cucumber, topped with salmon. </p>
-									</div>
-								</div>
-								<div class="custom-menu-item">
-									<div class="custom-menu-item-details">
-										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Caterpillar Roll</h3></div>
-										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 9</strong></div>
-									</div>
-									<div class="custom-menu-item-desc">
-										<p>Unagi, cucumber, avocado, topped with salmon.</p>
-									</div>
-								</div>
-								<div class="custom-menu-item">
-									<div class="custom-menu-item-details">
-										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Bayview Roll</h3></div>
-										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 9</strong></div>
-									</div>
-									<div class="custom-menu-item-desc">
-										<p>Dynamite Roll topped with torched white tuna.</p>
-									</div>
-								</div>
-								<div class="custom-menu-item">
-									<div class="custom-menu-item-details">
-										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Snow Valley Roll</h3></div>
+										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Poke</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
 										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 10</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
-										<p>Unagi, avocado, tempura bits, torched white tuna, garlic mayo.</p>
+										<p>Sushi rice, lettuce, tomato, avodaco, edamame, corn, salmon.</p>
+									</div>
+								</div>
+								<div class="custom-menu-item">
+									<div class="custom-menu-item-details">
+										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Udon</h3></div>
+										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 6</strong></div>
+									</div>
+									<div class="custom-menu-item-desc">
+										<p>Noodles, seafood broth, green onions, seaweed, tempura bits.</p>
+									</div>
+								</div>
+								<div class="custom-menu-item">
+									<div class="custom-menu-item-details">
+										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Topokki</h3></div>
+										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 6</strong></div>
+									</div>
+									<div class="custom-menu-item-desc">
+										<p>Stir-fried Korean rice cake with hot pepper paste, egg, fish cake.</p>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col text-center">
-								<a href="#location" data-hash data-hash-offset="92" class="btn btn-primary btn-outline font-weight-bold border-width-3 btn-px-5 py-3 appear-animation" data-appear-animation="fadeInUpShorter">WHERE WE ARE</a>
+								<a href="img/menu/menu_rolls.png" data-hash data-hash-offset="92" class="btn btn-primary btn-outline font-weight-bold border-width-3 btn-px-5 py-3 appear-animation img-thumbnail-no-borders img-thumbnail-hover-icon lightbox" data-appear-animation="fadeInUpShorter" data-plugin-options="{'type':'image'}">VIEW FULL MENU</a>
 							</div>
 						</div>
 					</div>
