add taro bingsu

--- a/index.html
+++ b/index.html
@@ -187,6 +187,12 @@
 										<li class="dropdown order-7">
 											<a class="dropdown-item" data-hash data-hash-offset="92" href="#location">Location</a>
 										</li>
+										<li class="dropdown order-7">
+											<!-- If you would like to customize the button, remove or change the "class" attribute inside the <span> tag -->
+											<span class="glf-button" data-glf-cuid="ef7fe87d-0baa-4c18-bd82-0ba941002dd5" data-glf-ruid="160e8197-eae9-49f8-80e0-c352b0ebb91c" > See MENU & Order</span>
+											<span class="glf-button reservation" data-glf-cuid="ef7fe87d-0baa-4c18-bd82-0ba941002dd5" data-glf-ruid="160e8197-eae9-49f8-80e0-c352b0ebb91c" data-glf-reservation="true" > Table Reservation</span>
+											<script src="https://www.fbgcdn.com/embedder/js/ewm2.js" defer async ></script>
+										</li>
 										<li class="align-items-center d-none d-lg-flex order-4 px-5 mx-2 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="250">
 											<span class="header-logo">
 												<a href="index.html" class="w-100 text-center">
