--- a/index.html
+++ b/index.html
@@ -187,12 +187,6 @@
 										<li class="dropdown order-7">
 											<a class="dropdown-item" data-hash data-hash-offset="92" href="#location">Location</a>
 										</li>
-										<li class="dropdown order-7">
-											<!-- If you would like to customize the button, remove or change the "class" attribute inside the <span> tag -->
-											<span class="glf-button" data-glf-cuid="ef7fe87d-0baa-4c18-bd82-0ba941002dd5" data-glf-ruid="160e8197-eae9-49f8-80e0-c352b0ebb91c" > See MENU & Order</span>
-											<span class="glf-button reservation" data-glf-cuid="ef7fe87d-0baa-4c18-bd82-0ba941002dd5" data-glf-ruid="160e8197-eae9-49f8-80e0-c352b0ebb91c" data-glf-reservation="true" > Table Reservation</span>
-											<script src="https://www.fbgcdn.com/embedder/js/ewm2.js" defer async ></script>
-										</li>
 										<li class="align-items-center d-none d-lg-flex order-4 px-5 mx-2 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="250">
 											<span class="header-logo">
 												<a href="index.html" class="w-100 text-center">
@@ -282,7 +276,10 @@
 								<div class="appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">
 									<p class="font-weight-light text-color-light text-3 opacity-7 px-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit massa enim. Nullam id varius nunc. </p>
 								</div>
-								<a href="tel:905-787-0396" class="font-weight-bold text-color-primary text-4 ls-0 d-block mb-2 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="650">CALL US: 905-787-0396</a>
+
+								<!-- GLORIAFOOD BUTTON -->
+								<a data-glf-cuid="ef7fe87d-0baa-4c18-bd82-0ba941002dd5" data-glf-ruid="160e8197-eae9-49f8-80e0-c352b0ebb91c" class="btn btn-primary btn-outline font-weight-bold border-width-3 btn-px-5 py-3 appear-animation img-thumbnail-no-borders img-thumbnail-hover-icon lightbox" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="650">SEE MENU & ORDER</a>
+								<script src="https://www.fbgcdn.com/embedder/js/ewm2.js" defer async ></script>
 							</div>
 							<div class="col-md-6 text-center">
 								<div class="row justify-content-center">
@@ -561,7 +558,7 @@
 						</div>
 						<div class="row">
 							<div class="col text-center">
-								<a href="img/menu/menu_rolls.png" data-hash data-hash-offset="92" class="btn btn-primary btn-outline font-weight-bold border-width-3 btn-px-5 py-3 appear-animation img-thumbnail-no-borders img-thumbnail-hover-icon lightbox" data-appear-animation="fadeInUpShorter" data-plugin-options="{'type':'image'}">VIEW FULL MENU</a>
+								<a href="img/menu/menu_rolls.jpg" data-hash data-hash-offset="92" class="btn btn-primary btn-outline font-weight-bold border-width-3 btn-px-5 py-3 appear-animation img-thumbnail-no-borders img-thumbnail-hover-icon lightbox" data-appear-animation="fadeInUpShorter" data-plugin-options="{'type':'image'}">VIEW FULL MENU</a>
 							</div>
 						</div>
 					</div>
