--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
 							</div>
 	
 							<form id="contactForm" class="contact-form p-4 rounded " action="https://preview.oklerthemes.com/porto/7.6.0/php/contact-form.php" method="POST">			
-								<div class="p-2">
+								<div class="p-2 appear-animation" data-appear-animation="maskUp">
 									<div class="form-row">
 										<div class="form-group col-lg-6">
 											<label class="required text-dark" style="font-family: Poppins">First Name</label>
