--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 
 								<!-- GLORIAFOOD BUTTON -->
 								<a data-glf-cuid="ef7fe87d-0baa-4c18-bd82-0ba941002dd5" data-glf-ruid="160e8197-eae9-49f8-80e0-c352b0ebb91c" class="btn btn-primary btn-outline font-weight-bold border-width-3 btn-px-5 py-3 appear-animation img-thumbnail-no-borders img-thumbnail-hover-icon lightbox" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="650">SEE MENU & ORDER</a>
-								<script src="https://www.fbgcdn.com/embedder/js/ewm2.js" defer async ></script>
+								
 							</div>
 							<div class="col-md-6 text-center">
 								<div class="row justify-content-center">
@@ -791,10 +791,10 @@
 		<!-- Theme Initialization Files -->
 		<script src="js/theme.init.js"></script>
 	
-
+		<!-- GloriaFoods Script -->
+		<script src="https://www.fbgcdn.com/embedder/js/ewm2.js" defer async ></script>
 		
-
-
+		<!-- Google Analytics Script -->
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
