Removed extra files

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 		<link rel="stylesheet" href="vendor/rs-plugin/css/navigation.css">
 		
 		<!-- Demo CSS -->
-		<link rel="stylesheet" href="css/demos/demo-coffee.css">
+		<link rel="stylesheet" href="css/tea.css">
 
 		<!-- Skin CSS -->
-		<link rel="stylesheet" href="css/skins/skin-coffee.css">		<script src="master/style-switcher/style.switcher.localstorage.js"></script> 
+		<link rel="stylesheet" href="css/skin.css">		<script src="master/style-switcher/style.switcher.localstorage.js"></script> 
 
 		<!-- Theme Custom CSS -->
 		<link rel="stylesheet" href="css/custom.css">
@@ -278,7 +278,7 @@
 								</div>
 
 								<!-- GLORIAFOOD BUTTON -->
-								<a data-glf-cuid="ef7fe87d-0baa-4c18-bd82-0ba941002dd5" data-glf-ruid="160e8197-eae9-49f8-80e0-c352b0ebb91c" class="btn btn-primary btn-outline font-weight-bold border-width-3 btn-px-5 py-3 appear-animation img-thumbnail-no-borders img-thumbnail-hover-icon lightbox" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="650">SEE MENU & ORDER</a>
+								<a data-glf-cuid="ef7fe87d-0baa-4c18-bd82-0ba941002dd5" data-glf-ruid="160e8197-eae9-49f8-80e0-c352b0ebb91c" class="btn btn-primary btn-outline font-weight-bold border-width-3 btn-px-5 py-3 appear-animation img-thumbnail-no-borders img-thumbnail-hover-icon lightbox" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="650">PRE-ORDER ONLINE</a>
 								
 							</div>
 							<div class="col-md-6 text-center">
@@ -750,7 +750,7 @@
 					<div class="container py-2">
 						<div class="row py-4">
 							<div class="col text-center">
-								<p class="text-color-light font-weight-light opacity-4 mb-0">Copyrights © 2019 Roll N Tea</p>
+								<p class="text-color-light font-weight-light opacity-4 mb-0">Copyrights © 2020 Roll N Tea</p>
 							</div>
 						</div>
 					</div>
