--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
 								</div>
 							</div>
 	
-							<form id="contactForm" class="contact-form p-4 rounded " action="https://preview.oklerthemes.com/porto/7.6.0/php/contact-form.php" method="POST">			
+							<form id="contactForm" name="contact" class="contact-form p-4 rounded " method="POST" netlify>			
 								<div class="p-2 appear-animation" data-appear-animation="maskUp">
 									<div class="form-row">
 										<div class="form-group col-lg-6">
@@ -691,7 +691,7 @@
 										</div>
 										<div class="form-group col-lg-6">
 											<label class="text-dark" style="font-family: Poppins">Phone Number</label>
-											<input type="email" value="" data-msg-required="Please enter your phone number." data-msg="Please enter a valid phone number." maxlength="100" class="form-control" name="phone" id="phone" required>
+											<input type="tel" value="" data-msg-required="Please enter your phone number." data-msg="Please enter a valid phone number." maxlength="100" class="form-control" name="phone" id="phone">
 										</div>
 									</div>
 									<div class="form-row">
