--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 3.7</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
-									<p>Original, Jasmine Green, Taro, Strawberry, Matcha and more.</p>
+										<p><b>Flavours:</b> Original, Jasmine Green, Taro, Taro Coconut, Strawberry, Coffee, Rose, Almond, Mango, Chocolate, Blueberry, Oolong, Matcha, Honeydew, Banana, Coconut, Hazelnut, Red Bean, Earl Grey.</p>
 									</div>
 								</div>
 								<div class="custom-menu-item">
@@ -401,7 +401,7 @@
 										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 3.5</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
-										<p>Black, Jasmine Green, Oolong, and Tea Satchet.</p>
+										<p><b>Options:</b> Black, Jasmine Green, Oolong, Tea Satchet.</p>
 									</div>
 								</div>
 								<div class="custom-menu-item">
@@ -411,7 +411,7 @@
 										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 4.2</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
-										<p>Mango, Green Apple, Tropical Fruit, Litchi, Passionfruit and more.</p>
+										<p><b>Flavours:</b> Mango, Green Apple, Tropical Fruit, Yogurt, Honey, Litchi, Grape, Blueberry, Honey Lemon, Passionfruit, Peach, Pineapple, Kumquat, Grapefruit, Strawberry.</p>
 									</div>
 								</div>
 								<div class="custom-menu-item">
@@ -421,7 +421,7 @@
 										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 4.9</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
-										<p>Original, Passionfruit, Litchi, Green Apple and Grapefruit.</p>
+										<p><b>Flavours:</b> Original, Passionfruit, Litchi, Green Apple, Grapefruit.</p>
 									</div>
 								</div>
 								<div class="custom-menu-item">
@@ -431,7 +431,7 @@
 										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 4.4</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
-										<p>Mango, Pineapple, Grape, Honeydew, Blueberry, Peach and more.</p>
+										<p><b>Flavours:</b> Mango, Pineapple, Passionfruit, Honeydew, Grape, Blueberry, Yogurt, Strawberry, Matcha, Peach, Taro, Litchi.</p>
 									</div>
 								</div>
 								<div class="custom-menu-item">
@@ -441,7 +441,7 @@
 										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 5.5</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
-										<p>Strawberry, Mango, Strawberry Banana and Avocado.</p>
+										<p><b>Flavours:</b> Strawberry, Mango, Strawberry Banana, Avocado.</p>
 									</div>
 								</div>
 							</div>
@@ -713,7 +713,7 @@
 				</section>
 
 				<!-- Google Maps - Go to the bottom of the page to change settings and map location. -->
-				<div id="location">
+				<div id="location" class="appear-animation" data-appear-animation="maskUp">
 					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2875.9567792784924!2d-79.41824028449498!3d43.87744707911429!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b2b3a375a66b9%3A0x4bbf444074d63ea8!2sRoll%20N%20Tea!5e0!3m2!1sen!2sca!4v1579367923074!5m2!1sen!2sca" width="100%" height="500px" frameborder="0" style="border:0;" allowfullscreen="true"></iframe>
 				</div>
 			</div> 
