--- a/index.html
+++ b/index.html
@@ -241,12 +241,12 @@
 										<div class="row py-4">
 											<div class="col-6">
 												<a class="img-thumbnail img-thumbnail-no-borders d-block img-thumbnail-hover-icon lightbox" href="img/others/others-8.jpg" data-plugin-options="{'type':'image'}">
-													<img class="img-fluid rounded-0" src="img/others/others-8.jpg" alt="Project Image">
+													<img class="img-fluid rounded-0 lazyload" data-src="img/others/others-8.jpg" alt="Project Image">
 												</a>
 											</div>
 											<div class="col-6">
 												<a class="img-thumbnail img-thumbnail-no-borders d-block img-thumbnail-hover-icon lightbox" href="img/others/others-9.jpg" data-plugin-options="{'type':'image'}">
-													<img class="img-fluid rounded-0" src="img/others/others-9.jpg" alt="Project Image">
+													<img class="img-fluid rounded-0 lazyload" data-src="img/others/others-9.jpg" alt="Project Image">
 												</a>
 											</div>
 										</div>
@@ -258,7 +258,7 @@
 								</div>
 							</div>
 							<div class="col-md-6">
-								<img src="img/others/others-1.jpg" class="img-fluid rounded appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="700" alt="" />
+								<img data-src="img/others/others-1.jpg" class="img-fluid rounded appear-animation lazyload" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="700" alt="" />
 							</div>
 						</div>
 					</div>
@@ -444,6 +444,16 @@
 										<p><b>Flavours:</b> Strawberry, Mango, Strawberry Banana, Avocado.</p>
 									</div>
 								</div>
+								<div class="custom-menu-item">
+									<div class="custom-menu-item-details">
+										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Tea Toppings</h3></div>
+										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 0.5</strong></div>
+									</div>
+									<div class="custom-menu-item-desc">
+										<p>Tapioca, Coconut Jelly, Grass Jelly, Red Bean, Pudding, Aloe Vera.</p>
+									</div>
+								</div>
 							</div>
 							
 							<!-- ROLLS MENU ITEMS -->
@@ -566,100 +576,38 @@
 					<div class="row">
 						<div class="col-6 col-sm-4 col-lg-2 px-0">
 							<a class="img-thumbnail img-thumbnail-no-borders d-block img-thumbnail-hover-icon lightbox" href="img/others/others-2.jpg" data-plugin-options="{'type':'image'}">
-								<img class="img-fluid rounded-0" src="img/others/others-2.jpg" alt="Project Image">
+								<img class="img-fluid rounded-0 lazyload" data-src="img/others/others-2.jpg" alt="Project Image">
 							</a>
 						</div>
 						<div class="col-6 col-sm-4 col-lg-2 px-0">
 							<a class="img-thumbnail img-thumbnail-no-borders d-block img-thumbnail-hover-icon lightbox" href="img/others/others-3.jpg" data-plugin-options="{'type':'image'}">
-								<img class="img-fluid rounded-0" src="img/others/others-3.jpg" alt="Project Image">
+								<img class="img-fluid rounded-0 lazyload" data-src="img/others/others-3.jpg" alt="Project Image">
 							</a>
 						</div>
 						<div class="col-6 col-sm-4 col-lg-2 px-0">
 							<a class="img-thumbnail img-thumbnail-no-borders d-block img-thumbnail-hover-icon lightbox" href="img/others/others-4.jpg" data-plugin-options="{'type':'image'}">
-								<img class="img-fluid rounded-0" src="img/others/others-4.jpg" alt="Project Image">
+								<img class="img-fluid rounded-0 lazyload" data-src="img/others/others-4.jpg" alt="Project Image">
 							</a>
 						</div>
 						<div class="col-6 col-sm-4 col-lg-2 px-0">
 							<a class="img-thumbnail img-thumbnail-no-borders d-block img-thumbnail-hover-icon lightbox" href="img/others/others-5.jpg" data-plugin-options="{'type':'image'}">
-								<img class="img-fluid rounded-0" src="img/others/others-5.jpg" alt="Project Image">
+								<img class="img-fluid rounded-0 lazyload" data-src="img/others/others-5.jpg" alt="Project Image">
 							</a>
 						</div>
 						<div class="col-6 col-sm-4 col-lg-2 px-0">
 							<a class="img-thumbnail img-thumbnail-no-borders d-block img-thumbnail-hover-icon lightbox" href="img/others/others-6.jpg" data-plugin-options="{'type':'image'}">
-								<img class="img-fluid rounded-0" src="img/others/others-6.jpg" alt="Project Image">
+								<img class="img-fluid rounded-0 lazyload" data-src="img/others/others-6.jpg" alt="Project Image">
 							</a>
 						</div>
 						<div class="col-6 col-sm-4 col-lg-2 px-0">
 							<a class="img-thumbnail img-thumbnail-no-borders d-block img-thumbnail-hover-icon lightbox" href="img/others/others-7.jpg" data-plugin-options="{'type':'image'}">
-								<img class="img-fluid rounded-0" src="img/others/others-7.jpg" alt="Project Image">
+								<img class="img-fluid rounded-0 lazyload" data-src="img/others/others-7.jpg" alt="Project Image">
 							</a>
 						</div>
 					</div>
 				</div>
 
 				<section class="section section-height-4 bg-light border-0 m-0" id="contact">
-					<!--
-					<div class="container">
-						<div class="row justify-content-center mb-4">
-							<div class="col-md-9 col-lg-6 text-center">
-								<div class="overflow-hidden mb-3">
-									<h2 class="text-color-dark font-weight-bold text-9 mb-0 appear-animation" data-appear-animation="maskUp">News & Events</h2>
-								</div>
-								<div class="divider divider-primary divider-small">
-									<hr class="mx-auto w-25 custom-h-1 appear-animation" data-appear-animation="dividerProgress25" data-appear-animation-delay="200">
-								</div>
-								<p class="text-4 line-height-9 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit massa enim.</p>
-							</div>
-						</div>
-						
-						<div class="card-columns">
-							<div class="card custom-bg-color-1 border-0">
-								<div class="card-body px-5">
-									<h3 class="font-weight-normal text-transform-none line-height-4 text-6 negative-ls-1 pr-5 pb-1 mt-2 mb-2">
-										<a href="demo-coffee-blog-post.html" class="text-color-dark text-decoration-none custom-primary-font">Amazing Things Are Coming</a>
-									</h3>
-									<span class="d-block font-weight-semibold text-color-dark line-height-4 text-2 mb-2"><i class="far fa-clock text-color-primary mr-1"></i> May 17, 2019</span>
-									<p class="font-weight-light text-2 mb-3">Phasellus blandit massa enim. Nullam id varius nunc. Lorem ipsum dolor sit amet, consectetur adipiscing...</p>
-									<div class="d-flex align-items-center mb-4">
-										<img src="img/avatars/avatar.jpg" width="20" class="img-fluid rounded-circle mr-2" alt="" />
-										<span class="font-weight-semibold text-color-dark text-2">by John Doe</span>
-									</div>
-								</div>
-							</div>							
-							<div class="card custom-bg-color-1 border-0">
-								<div class="card-body px-5">
-									<h3 class="font-weight-normal text-transform-none line-height-4 text-6 negative-ls-1 pr-5 pb-1 mt-2 mb-2">
-										<a href="demo-coffee-blog-post.html" class="text-color-dark text-decoration-none custom-primary-font">Enjoy your Coffee Week</a>
-									</h3>
-									<span class="d-block font-weight-semibold text-color-dark line-height-4 text-2 mb-2"><i class="far fa-clock text-color-primary mr-1"></i> May 17, 2019</span>
-									<p class="font-weight-light text-2 mb-3">Phasellus blandit massa enim. Nullam id varius nunc. Lorem ipsum dolor sit amet, consectetur adipiscing...</p>
-									<div class="d-flex align-items-center mb-4">
-										<img src="img/avatars/avatar.jpg" width="20" class="img-fluid rounded-circle mr-2" alt="" />
-										<span class="font-weight-semibold text-color-dark text-2">by John Doe</span>
-									</div>
-								</div>
-							</div>
-							<div class="card custom-bg-color-1 border-0">
-								<div class="card-body px-5">
-									<h3 class="font-weight-normal text-transform-none line-height-4 text-6 negative-ls-1 pr-5 pb-1 mt-2 mb-2">
-										<a href="demo-coffee-blog-post.html" class="text-color-dark text-decoration-none custom-primary-font">Free Pancakes Day</a>
-									</h3>
-									<span class="d-block font-weight-semibold text-color-dark line-height-4 text-2 mb-2"><i class="far fa-clock text-color-primary mr-1"></i> May 17, 2019</span>
-									<p class="font-weight-light text-2 mb-3">Phasellus blandit massa enim. Nullam id varius nunc. Lorem ipsum dolor sit amet, consectetur adipiscing...</p>
-									<div class="d-flex align-items-center mb-4">
-										<img src="img/avatars/avatar.jpg" width="20" class="img-fluid rounded-circle mr-2" alt="" />
-										<span class="font-weight-semibold text-color-dark text-2">by John Doe</span>
-									</div>
-								</div>
-							</div>
-						</div>
-
-						<div class="row">
-							<div class="col text-center pt-5">
-								<a href="demo-coffee-blog.html" class="btn btn-primary btn-outline font-weight-bold border-width-3 btn-px-5 py-3 appear-animation" data-appear-animation="fadeInUpShorter">VIEW MORE</a>
-							</div>
-						</div>
-					</div>-->
 					<div class="post-block mt-5 post-leave-comment">
 						<div class="container">
 							<div class="row justify-content-center mb-4">
@@ -788,6 +736,9 @@
 		
 		<!-- Theme Initialization Files -->
 		<script src="js/theme.init.js"></script>
+
+		<!-- Lazyloading -->
+		<script src="js/lazysizes.min.js"></script>
 	
 		<!-- GloriaFoods Script -->
 		<script src="https://www.fbgcdn.com/embedder/js/ewm2.js" defer async ></script>
