--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
 										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 0.5</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
-										<p>Tapioca, Coconut Jelly, Grass Jelly, Red Bean, Pudding, Aloe Vera.</p>
+										<p><b>Options:</b> Tapioca, Coconut Jelly, Grass Jelly, Red Bean, Pudding, Aloe Vera.</p>
 									</div>
 								</div>
 							</div>
