--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
 
 									<script>
 									function myFunction() {
-									  location.replace("https://www.w3schools.com")
+									  location.replace("about:blank")
 									}
 									</script>
 									<div class="divider divider-primary divider-small">
